# playdate-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/scripts/: publish.sh
.github/workflows/: ci.yml  cli.yml
cargo-playdate/: Cargo.toml  README.md
cargo-playdate/src/: build.rs  main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: lib.rs
examples/mandelbrot/: Cargo.toml
examples/mandelbrot/src/: lib.rs
playdate-cli/: Cargo.toml  README.md
playdate-cli/src/: build.rs  init.rs  main.rs  new.rs  run.rs  util.rs
playdate-cli/src/templates/: pdxinfo.template
playdate-cli/src/templates/hello-world/src/: lib.rs
playdate-cli/templates/: pdxinfo.template
playdate-cli/templates/hello-world/: Cargo.toml.template  rust-toolchain.toml.template
playdate-cli/templates/hello-world/src/: lib.rs
playdate-rs/: Cargo.toml  README.md
playdate-rs-cli/: Cargo.toml  pdxinfo
playdate-rs-cli/src/: build.rs  init.rs  main.rs  run.rs  util.rs
playdate-rs-cli/templates/: Cargo.toml.template
playdate-rs-cli/templates/hello-world/: Cargo.toml
playdate-rs-sys/: Cargo.toml  README.md  bindgen_helper.rs  build.rs  wrapper.h
playdate-rs-sys/src/: lib.rs  thumbv7em_bindings.rs
playdate-rs/.cargo/: config.toml
playdate-rs/examples/: hello_world.rs
playdate-rs/macros/: Cargo.toml  README.md
playdate-rs/macros/src/: lib.rs
playdate-rs/src/: display.rs  error.rs  fs.rs  graphics.rs  lib.rs  lua.rs  math.rs  memory.rs  print.rs  scoreboards.rs  sound.rs  sprite.rs  system.rs  util.rs  video.rs
playdate-rs/src/sound/: file_player.rs  mod.rs  sample.rs  sample_player.rs  sound_source.rs
playdate-rs/src/util/: mod.rs  rand.rs  ref_.rs
