[workspace]
resolver = "2"
members = [
    # Bindings and wrappers
    "playdate-rs",
    "playdate-rs/macros",
    "playdate-rs-sys",
    # CLI Tools
    "playdate-cli",
    # Examples
    "examples/hello-world",
    "examples/mandelbrot",
]

[workspace.package]
version = "0.0.8"
edition = "2021"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Put internal dependencies here, to make verison bumping easier when making a new release.
[workspace.dependencies]
playdate-rs-sys = { version = "0.0.8", path = "./playdate-rs-sys" }
playdate-rs-macros = { version = "0.0.8", path = "./playdate-rs/macros" }
