[workspace]
resolver = "2"
members = [
    # Bindings and wrappers
    "playdate-rs",
    "playdate-rs/macros",
    "playdate-rs-sys",
    # CLI Tools
    "playdate-cli",
    # Examples
    "examples/hello-world",
    "examples/mandelbrot",
]

[workspace.package]
# This is the version for playdate-rs, playdate-rs-macros, and example packages.
# playdate-rs-sys and playdate-cli have separate versions specified in their own Cargo.toml.
version = "0.0.11"
edition = "2021"
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Put internal dependencies here, to make verison bumping easier when making a new release.
[workspace.dependencies]
playdate-rs-sys = { version = "0.0.11", path = "./playdate-rs-sys" }
playdate-rs-macros = { version = "0.0.11", path = "./playdate-rs/macros" }
