[package]
name = "playdate-rs-cli"
description = "playdate-rs command line tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-playdate"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
cargo_metadata = "0.17.0"
clap = { version = "4.3.23", features = ["derive"] }
clap-cargo = "0.11.0"
env_logger = "0.10.0"
log = "0.4.20"
minijinja = "1.0.6"
home = "0.5.5"
