[package]
name = "playdate-rs-sys"
description = "Rust bindings for the Playdate SDK"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen-thumbv7em-binding"
path = "src/bin/gen-thumbv7em-binding.rs"
required-features = ["generate"]

[dependencies]
bindgen = { version = "0.65.1", optional = true }
home = { version = "0.5.5", optional = true }

[build-dependencies]
bindgen = "0.65.1"
home = "0.5.5"

[features]
generate = ["bindgen", "home"]
