[package]
name = "playdate-rs"
description = "Rust type-safe bindings for the Playdate SDK"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playdate-rs-sys = { version = "0.0.1", path = "../playdate-rs-sys" }
playdate-rs-macros = { version = "0.0.1", path = "./macros" }
spin = "0.9.8"
no_std_io = "0.6.0"
euclid = { version = "0.22.9", default-features = false, features = ["libm"] }
bitmask-enum = "2.2.2"
