[package]
name = "playdate-rs"
description = "Safe Rust bindings for the Playdate SDK C-CPI"
repository = "https://github.com/rusty-crank/playdate-rs"
categories = ["api-bindings", "embedded", "game-development", "no-std"]
documentation = "https://docs.rs/playdate-rs"
homepage = "https://github.com/rusty-crank/playdate-rs"
keywords = ["playdate", "gamedev"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playdate-rs-sys = { workspace = true }
playdate-rs-macros = { workspace = true }
spin = "0.9.8"
no_std_io = { version = "0.6.0", features = ["alloc"] }
euclid = { version = "0.22.9", default-features = false, features = ["libm"] }
bitmask-enum = "2.2.2"
