[package]
name = "hello-world"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playdate-rs = { path = "../../playdate-rs" }
