[package]
name = "hello-world"
description = "A hello world example for the Playdate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playdate-rs = { path = "../../playdate-rs" }

[package.metadata.pdxinfo]
bundle_id = "com.example.hello-world"
