[package]
name = "playdate-rs-macros"
description = "Helpful macros for playdate-rs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.29"
quote = "1.0.33"
