[package]
name = "playdate-rs-macros"
description = "Helpful macros for playdate-rs"
repository = "https://github.com/rusty-crank/playdate-rs"
categories = [
    "api-bindings",
    "development-tools::procedural-macro-helpers",
    "embedded",
    "game-development",
    "no-std",
]
documentation = "https://docs.rs/playdate-rs-sys"
homepage = "https://github.com/rusty-crank/playdate-rs"
keywords = ["playdate", "gamedev", "proc-macro"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
quote = "1.0.33"
